Removed deprecated methods on ColorControl cluster.

--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,10 @@ replay_pid*
 migrationV8.txt
 migrationV8-answered.txt
 matterbridgeEdge.ts
-matterbridgeDeviceEdge.ts
+matterbridgeEdge.test.ts
+matterbridgeEndpoint.ts
+matterbridgeEndpoint.test.ts
+matterstorage
 
 coverage
 TODO.md
