--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "private": true,
   "homepage": "./",
   "scripts": {
@@ -15,8 +15,11 @@
     "checkDependencies": "npx npm-check-updates",
     "updateDependencies": "npx npm-check-updates -u && npm install & npm run cleanBuild",
     "install:react": "npm install react@latest react-dom@latest react-router-dom@latest react-scripts@latest react-table@latest",
-    "install:muimaterial": "npm install @mui/material@latest @emotion/react@latest @emotion/styled@latest @mui/icons-material@latest",
-    "install:rjsf": "npm install @rjsf/core @rjsf/utils @rjsf/validator-ajv8 @rjsf/mui"
+    "install:emotion": "npm install @emotion/react@latest @emotion/styled@latest",
+    "install:muimaterial": "npm install @mui/material@5.16.7 @mui/icons-material@5.16.7",
+    "install:roboto": "@fontsource/roboto@latest",
+    "install:qrcode": "npm install qrcode.react@latest",
+    "install:rjsf": "npm install @rjsf/core@latest @rjsf/utils@latest @rjsf/validator-ajv8@latest @rjsf/mui@latest"
   },
   "eslintConfig": {
     "extends": [
@@ -37,21 +40,22 @@
     ]
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.13",
-    "@mui/material": "^5.15.13",
-    "@rjsf/core": "^5.18.3",
-    "@rjsf/mui": "^5.18.3",
-    "@rjsf/utils": "^5.18.3",
-    "@rjsf/validator-ajv8": "^5.18.3",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.1.0",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/material": "^5.16.7",
+    "@rjsf/core": "^5.22.4",
+    "@rjsf/mui": "^5.22.4",
+    "@rjsf/utils": "^5.22.4",
+    "@rjsf/validator-ajv8": "^5.22.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "qrcode.react": "^3.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.1",
+    "qrcode.react": "^4.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0",
     "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
     "web-vitals": "^2.1.4"
