--- a/package.json
+++ b/package.json
@@ -113,9 +113,7 @@
     "updateMatter:latest": "npm run deepClean && npm install @project-chip/matter-node.js@latest @project-chip/matter.js@latest && npm install && npm run build",
     "updateMatter:dev": "npm run deepClean && npm install @project-chip/matter-node.js@dev @project-chip/matter.js@dev && npm install && npm run build",
     "updateMatter:loc": "npm run deepClean && npm install ../matter.js/packages/matter-node.js ../matter.js/packages/matter.js && npm install && npm run build",
-    "wtf:install": "npm install wtfnode && npm install --save-dev @types/wtfnode",
-    "wtf:uninstall": "npm uninstall wtfnode @types/wtfnode",
-    "install:dependencies": "npm install @project-chip/matter-node.js express https archiver glob node-ansi-logger node-persist-manager ws && npm install --save-dev rimraf",
+    "install:dependencies": "npm install @matter/main @matter/nodejs @project-chip/matter.js archiver express glob https node-ansi-logger node-persist-manager ws",
     "install:typescript": "npm install --save-dev @types/express @types/node @types/ws typescript && npm run build",
     "install:eslint": "npm install --save-dev eslint @eslint/js @types/eslint__js typescript-eslint",
     "install:prettier": "npm install --save-dev prettier eslint-config-prettier eslint-plugin-prettier",
