--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "1.6.5-dev.2",
+  "version": "1.6.5-dev.3",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -76,6 +76,7 @@
   },
   "scripts": {
     "build": "tsc",
+    "buildProduction": "npm run clean && tsc --project tsconfig.production.json",
     "watch": "tsc --watch",
     "start": "node ./dist/cli.js",
     "start:test": "node ./dist/cli.js -test",
@@ -84,7 +85,7 @@
     "start:controller": "node ./dist/cli.js -controller",
     "start:edge": "node ./dist/cli.js -edge -debug -logger debug -matterlogger debug",
     "start:help": "node ./dist/cli.js -help",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand",
     "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose --coverage",
     "test:verbose": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose",
     "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --watch",
@@ -109,24 +110,23 @@
     "deepClean": "npx rimraf tsconfig.tsbuildinfo package-lock.json npm-shrinkwrap.json ./dist ./node_modules",
     "deepCleanBuild": "npm run deepClean && npm install && npm run build && npm link",
     "prepublishOnly": "npm pkg delete devDependencies && npm pkg delete scripts && npm install --omit=dev && npm shrinkwrap",
-    "npmPack": "npm run cleanBuild && copy package.json package.log && npm pkg delete devDependencies && npm pkg delete scripts && npm install --omit=dev && npm shrinkwrap && npm pack && copy package.log package.json && npm run deepCleanBuild",
-    "buildProduction": "npm run clean && tsc --project tsconfig.production.json",
+    "npmPack": "copy package.json package.log && npm run buildProduction && npm pkg delete devDependencies && npm pkg delete scripts && npx rimraf ./node_modules && npm install --omit=dev && npm shrinkwrap && npm pack && copy package.log package.json",
     "npmPublishTagDev": "copy package.json package.log && npm run buildProduction && npm pkg delete devDependencies && npm pkg delete scripts && npx rimraf ./node_modules && npm install --omit=dev && npm shrinkwrap && npm publish --tag dev && copy package.log package.json",
     "checkDependencies": "npx npm-check-updates",
     "updateDependencies": "npx npm-check-updates -u && npm install && npm run cleanBuild && npm link",
-    "updateMatter:latest": "npm run deepClean && npm install @project-chip/matter-node.js@latest @project-chip/matter.js@latest && npm install && npm run build",
+    "updateMatter:latest": "npm run deepClean && npm install @matter/main@latest @matter/nodejs@latest @project-chip/matter.js@latest && npm install && npm run build",
     "updateMatter:dev": "npm run deepClean && npm install @matter/main@dev @matter/nodejs@dev @project-chip/matter.js@dev && npm install && npm run build",
     "updateMatter:loc": "npm run deepClean && npm install ../matter.js/packages/matter-node.js ../matter.js/packages/matter.js && npm install && npm run build",
     "install:dependencies": "npm install @matter/main @matter/nodejs @project-chip/matter.js archiver express glob https node-ansi-logger node-persist-manager ws",
     "install:typescript": "npm install --save-dev @types/express @types/node @types/ws typescript && npm run build",
-    "install:eslint": "npm install --save-dev eslint @eslint/js @types/eslint__js typescript-eslint",
-    "install:prettier": "npm install --save-dev prettier eslint-config-prettier eslint-plugin-prettier",
-    "install:jest": "npm install --save-dev jest ts-jest @types/jest eslint-plugin-jest"
+    "install:eslint": "npm install --save-dev eslint @eslint/js @types/eslint__js typescript-eslint && npm run lint",
+    "install:prettier": "npm install --save-dev prettier eslint-config-prettier eslint-plugin-prettier && npm run format",
+    "install:jest": "npm install --save-dev jest ts-jest @types/jest eslint-plugin-jest && npm run test"
   },
   "dependencies": {
-    "@matter/main": "^0.11.8",
-    "@matter/nodejs": "^0.11.8",
-    "@project-chip/matter.js": "^0.11.8",
+    "@matter/main": "0.11.8",
+    "@matter/nodejs": "0.11.8",
+    "@project-chip/matter.js": "0.11.8",
     "archiver": "7.0.1",
     "express": "4.21.1",
     "glob": "11.0.0",
