--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "1.6.6-dev.6",
+  "version": "1.6.6-dev.7",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -125,9 +125,9 @@
     "install:jest": "npm install --save-dev jest ts-jest @types/jest eslint-plugin-jest && npm run test"
   },
   "dependencies": {
-    "@matter/main": "0.11.8",
-    "@matter/nodejs": "0.11.8",
-    "@project-chip/matter.js": "0.11.8",
+    "@matter/main": "^0.11.9-alpha.0-20241206-22f233334",
+    "@matter/nodejs": "^0.11.9-alpha.0-20241206-22f233334",
+    "@project-chip/matter.js": "^0.11.9-alpha.0-20241206-22f233334",
     "archiver": "7.0.1",
     "express": "4.21.1",
     "glob": "11.0.0",
