Update Jest tests for edge

--- a/package.json
+++ b/package.json
@@ -85,21 +85,21 @@
     "start:controller": "node ./dist/cli.js -controller",
     "start:edge": "node ./dist/cli.js -edge -debug -logger debug -matterlogger debug",
     "start:help": "node ./dist/cli.js -help",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --forceExit",
     "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose --coverage",
     "test:verbose": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose",
     "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --watch",
-    "test:matterbridge": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose --coverage matterbridge.test.ts",
-    "test:bridgemode": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose matterbridge.bridge.test.ts",
-    "test:childbridgemode": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose matterbridge.childbridge.test.ts",
-    "test:endpoint": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose --coverage --detectOpenHandles matterbridgeEndpoint.test.ts",
-    "test:matterjsenpoint": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose --coverage --detectOpenHandles matterbridgeEndpoint.matterjs.test.ts",
+    "test:matterbridge": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose --forceExit --coverage matterbridge.test.ts",
+    "test:bridgemode": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose --forceExit matterbridge.bridge.test.ts",
+    "test:childbridgemode": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose --forceExit matterbridge.childbridge.test.ts",
+    "test:endpoint": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose --coverage --forceExit matterbridgeEndpoint.test.ts",
+    "test:matterjsenpoint": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose --coverage --forceExit matterbridgeEndpoint.matterjs.test.ts",
     "test:platform": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose  --coverage matterbridgePlatform.test.ts matterbridgeAccessoryPlatform.test.ts matterbridgeDynamicPlatform.test.ts",
     "test:pluginManager": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose --coverage pluginManager.test.ts",
     "test:deviceManager": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose --coverage deviceManager.test.ts",
     "test:utils": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose --coverage utils.test.ts",
     "test:colorUtils": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose --coverage colorUtils.test.ts",
-    "test:frontend": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose  --coverage frontend.test.ts",
+    "test:frontend": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose --forceExit --coverage frontend.test.ts",
     "lint": "eslint --max-warnings=0 .",
     "lint:fix": "eslint --fix --max-warnings=0 .",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
