Update Jest tests for edge

--- a/package.json
+++ b/package.json
@@ -86,9 +86,9 @@
     "start:edge": "node ./dist/cli.js -edge -debug -logger debug -matterlogger debug",
     "start:help": "node ./dist/cli.js -help",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --forceExit",
-    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose --coverage",
-    "test:verbose": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose",
-    "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --watch",
+    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --forceExit --verbose --coverage",
+    "test:verbose": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --forceExit --verbose",
+    "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --forceExit --watch",
     "test:matterbridge": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose --forceExit --coverage matterbridge.test.ts",
     "test:bridgemode": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose --forceExit matterbridge.bridge.test.ts",
     "test:childbridgemode": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose --forceExit matterbridge.childbridge.test.ts",
