--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "2.0.0-edge1",
+  "version": "2.0.0-edge.2",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -79,7 +79,7 @@
     "buildProduction": "npm run clean && tsc --project tsconfig.production.json",
     "watch": "tsc --watch",
     "start": "node ./dist/cli.js",
-    "start:test": "node ./dist/cli.js -test",
+    "start:inspect": "node --inspect ./dist/cli.js",
     "start:bridge": "node ./dist/cli.js -bridge",
     "start:childbridge": "node ./dist/cli.js -childbridge",
     "start:controller": "node ./dist/cli.js -controller",
