--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "2.0.0-edge.3",
+  "version": "2.0.0-edge.4",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -115,8 +115,8 @@
     "npmPublishTagLatest": "copy package.json package.log && npm run buildProduction && npm pkg delete devDependencies && npm pkg delete scripts && npm pkg delete types && npx rimraf ./node_modules && npm install --omit=dev && npm shrinkwrap && npm publish --tag latest && copy package.log package.json && npm run deepCleanBuild",
     "checkDependencies": "npx npm-check-updates",
     "updateDependencies": "npx npm-check-updates -u && npm install && npm run cleanBuild && npm link",
-    "updateMatter:latest": "npm run deepClean && npm install @matter/main@latest @matter/nodejs@latest @project-chip/matter.js@latest && npm install && npm run build",
-    "updateMatter:dev": "npm run deepClean && npm install @matter/main@dev @matter/nodejs@dev @project-chip/matter.js@dev && npm install && npm run build",
+    "updateMatter:latest": "npm run deepClean && npm install @matter/main@latest @project-chip/matter.js@latest && npm install && npm run build",
+    "updateMatter:dev": "npm run deepClean && npm install @matter/main@dev @project-chip/matter.js@dev && npm install && npm run build",
     "updateMatter:loc": "npm run deepClean && npm install ../matter.js/packages/matter-node.js ../matter.js/packages/matter.js && npm install && npm run build",
     "install:dependencies": "npm install @matter/main @matter/nodejs @project-chip/matter.js archiver express glob https node-ansi-logger node-persist-manager ws",
     "install:typescript": "npm install --save-dev @types/express @types/node @types/ws typescript && npm run build",
@@ -126,7 +126,6 @@
   },
   "dependencies": {
     "@matter/main": "0.11.9",
-    "@matter/nodejs": "0.11.9",
     "@project-chip/matter.js": "0.11.9",
     "archiver": "7.0.1",
     "express": "4.21.2",
