--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -35,7 +35,13 @@ RUN npm ci && npm link matterbridge && npm run build && npm pkg delete devDepend
 
 WORKDIR /matterbridge-test
 RUN GIT_SSL_NO_VERIFY=true git clone https://github.com/Luligu/matterbridge-test.git .
-RUN npm ci && npm link matterbridge && npm run buildProduction && npm pkg delete devDependencies && npm pkg delete scripts && npm pkg delete types && npm install --omit=dev && npm shrinkwrap && npm pack
+RUN npm ci
+RUN npm link matterbridge 
+RUN npm run buildProduction 
+RUN npm pkg delete devDependencies && npm pkg delete scripts && npm pkg delete types 
+RUN npm install --omit=dev 
+RUN npm shrinkwrap 
+RUN npm pack
 
 WORKDIR /matterbridge-example-accessory-platform
 RUN GIT_SSL_NO_VERIFY=true git clone https://github.com/Luligu/matterbridge-example-accessory-platform.git .
