--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -14,7 +14,7 @@ WORKDIR /app
 COPY ./package.json ./package-lock.json ./tsconfig.json ./tsconfig.production.json ./.npmignore ./
 COPY ./src ./src
 COPY ./frontend/build ./frontend/build
-RUN npm ci && npm run buildProduction && npm pkg delete devDependencies && npm pkg delete scripts && npm pkg delete types && npm install --omit=dev && npm link && npm shrinkwrap && npm pack 
+RUN npm ci && npm run buildProduction && npm pkg delete devDependencies scripts types && npm install --omit=dev && npm link && npm shrinkwrap && npm pack 
 
 WORKDIR /matterbridge-zigbee2mqtt
 RUN GIT_SSL_NO_VERIFY=true git clone -b dev https://github.com/Luligu/matterbridge-zigbee2mqtt.git .
